@@ -29,7 +29,7 @@ static vector<vector<df::job_item_vector_id>> get_vector_ids(color_ostream &out,
     auto &jitems = bld->jobs[0]->job_items;
     int num_job_items = (int)jitems.size();
     for (int jitem_idx = num_job_items - 1; jitem_idx >= 0; --jitem_idx) {
-        ret.emplace_back(getVectorIds(out, jitems[jitem_idx]));
+        ret.emplace_back(getVectorIds(out, jitems[jitem_idx], false));
     }
     return ret;
 }
