@@ -43,6 +43,7 @@ changelog.txt uses a syntax similar to RST, with a few special sequences:
 - `tailor`: now properly discriminates between dyed and undyed cloth, no longer defaults to using adamantine, and properly tracks material requirements for already queued orders
 
 ## Misc Improvements
+- `buildingplan`: filters and global settings are now ignored when manually choosing items for a building
 - `stockpiles`: support applying stockpile configurations with fully enabled categories to stockpiles in worlds other than the one where the configuration was exported from
 - `stockpiles`: support partial application of a saved config based on dynamic filtering
 - `stockpiles`: additive and subtractive modes when applying a second stockpile configuration on top of a first
